--- a/pom.xml
+++ b/pom.xml
@@ -10,23 +10,10 @@
 		<relativePath /> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.daw</groupId>
-	<artifactId>TesterJDBC</artifactId>
+	<artifactId>Peliculas</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>TesterJDBC</name>
-	<description>Demo project for Spring Boot</description>
-	<url />
-	<licenses>
-		<license />
-	</licenses>
-	<developers>
-		<developer />
-	</developers>
-	<scm>
-		<connection />
-		<developerConnection />
-		<tag />
-		<url />
-	</scm>
+	<name>Peliculas</name>
+	<description>Proyecto para gestionar películas</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
